<resources>
    <string name="app_name">Arinos</string>
    <string name="rupees_symbol_label">₹</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_my_orders">My Orders</string>
    <string name="drawer_item_logout">Log out</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="shop_by_ranking">Shop by ranking</string>
    <string name="sort_by">Sort By</string>
    <string name="shop_by_product">Shop by product</string>
    <string name="no_internet_message">Please check your internet connection</string>
    <string name="information">Information</string>
    <string name="facebook_app_id">\"\"</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="not_signed_in_register_now">Not Signed in? Register Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="product_description_label">Product Description</string>
    <string name="product_name_label">Product Name</string>
    <string name="price_label">$ Price</string>
    <string name="discount_off_label">discount% off</string>
    <string name="shop_by_most_recent_purchases_label">Shop by Most Recent Purchases</string>
    <string name="sort_by_label">Sort by</string>
    <string name="Delete_Title_label">Delete Cart</string>
    <string name="Cart_item_delete_msg">Do you really want to delete this item?</string>
    <string name="cart_is_empty_go_back_and_start_shopping">Cart is empty.Go back and start shopping!</string>
    <string name="cart_list">Cart List</string>
    <string name="check_out">Check Out</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_have_read_and_agreed_terms_and_conditions">I have read and agreed Terms and Conditions</string>
    <string name="submit">SUBMIT</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="error_enter_confirm_password">Please enter confirm password</string>
    <string name="error_enter_mobile_no">Please enter mobile number</string>
    <string name="terms_and_conditions">Please check terms and conditions.</string>
    <string name="error_enter_first_name">Please enter first name</string>
    <string name="error_enter_last_name">Please enter last name</string>
    <string name="register_now">Register Now</string>

</resources>
