<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/md_blue_grey_50"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="Create An Account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstName_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:hint="@string/first_name"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <!--  android:drawableStart="@drawable/ic_delete"
              android:drawablePadding="10dp"-->

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <!-- <View
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:background="@color/md_grey_600"
             app:layout_constraintTop_toBottomOf="@+id/firstName_TIL" />
     -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastName_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:hint="@string/last_name"
            app:layout_constraintTop_toBottomOf="@+id/firstName_TIL">

            <!-- android:drawableStart="@drawable/ic_delete"
             android:drawablePadding="10dp"
             android:padding="5dp"-->

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <!-- <View
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:background="@color/md_grey_600"
             app:layout_constraintTop_toBottomOf="@+id/lastName_TIL" />
     -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/lastName_TIL">

            <!--android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="10dp"
            android:padding="5dp"-->
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <!--<View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_600"
            app:layout_constraintTop_toBottomOf="@+id/email_TIL" />
    -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/email_TIL">

            <!--  android:drawableStart="@drawable/ic_delete"
              android:drawablePadding="10dp"
              android:padding="5dp"-->
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/simplePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <!-- <View
             android:id="@+id/view4"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:background="@color/md_grey_600"
             app:layout_constraintTop_toBottomOf="@+id/password_TIL" />
     -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPassword_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/password_TIL">

            <!-- android:drawableStart="@drawable/ic_delete"
             android:drawablePadding="10dp"
             android:padding="5dp"-->
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <!--<View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_600"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword_TIL" />
    -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNo_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword_TIL">
            <!--
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="10dp"
                    android:padding="5dp"-->
            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <!--<View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_600"
            app:layout_constraintTop_toBottomOf="@+id/mobileNo_TIL" />
    -->

        <CheckBox
            android:id="@+id/checkBoxTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNo_TIL" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"
            android:text="@string/i_have_read_and_agreed_terms_and_conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxTerms"
            app:layout_constraintTop_toBottomOf="@+id/mobileNo_TIL" />

        <Button
            android:id="@+id/button"
            style="@style/submit_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:onClick="createAccount"
            android:text="@string/register_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTerms" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>